--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,508 @@
 #
 #    pip-compile
 #
+aiohttp==3.9.1
+    # via web3
+aiosignal==1.3.1
+    # via aiohttp
+anyio==4.1.0
+    # via jupyter-server
+appnope==0.1.3
+    # via ipykernel
+argon2-cffi==23.1.0
+    # via jupyter-server
+argon2-cffi-bindings==21.2.0
+    # via argon2-cffi
+arrow==1.3.0
+    # via isoduration
+asn1crypto==1.5.1
+    # via coincurve
+asttokens==2.4.1
+    # via stack-data
+async-lru==2.0.4
+    # via jupyterlab
+async-timeout==4.0.3
+    # via aiohttp
+attrs==23.1.0
+    # via
+    #   aiohttp
+    #   jsonschema
+    #   referencing
+babel==2.13.1
+    # via jupyterlab-server
+beautifulsoup4==4.12.2
+    # via nbconvert
+bit==0.8.0
+    # via -r requirements.in
+bitarray==2.8.5
+    # via eth-account
+bleach==6.1.0
+    # via nbconvert
+certifi==2023.11.17
+    # via requests
+cffi==1.16.0
+    # via
+    #   argon2-cffi-bindings
+    #   coincurve
+charset-normalizer==3.3.2
+    # via requests
+coincurve==18.0.0
+    # via bit
+comm==0.2.0
+    # via ipykernel
+contourpy==1.2.0
+    # via matplotlib
+cycler==0.12.1
+    # via matplotlib
+cytoolz==0.12.2
+    # via eth-utils
+debugpy==1.8.0
+    # via ipykernel
+decorator==5.1.1
+    # via ipython
+defusedxml==0.7.1
+    # via nbconvert
+eth-abi==4.2.1
+    # via
+    #   eth-account
+    #   eth-tester
+    #   web3
+eth-account==0.10.0
+    # via
+    #   eth-tester
+    #   web3
+eth-hash[pycryptodome]==0.5.2
+    # via
+    #   eth-hash
+    #   eth-utils
+    #   web3
+eth-keyfile==0.7.0
+    # via eth-account
+eth-keys==0.4.0
+    # via
+    #   eth-account
+    #   eth-keyfile
+    #   eth-tester
+eth-rlp==1.0.0
+    # via eth-account
+eth-tester==0.10.0b1
+    # via -r requirements.in
+eth-typing==3.5.2
+    # via
+    #   eth-abi
+    #   eth-keys
+    #   eth-utils
+    #   web3
+eth-utils==2.3.1
+    # via
+    #   eth-abi
+    #   eth-account
+    #   eth-keyfile
+    #   eth-keys
+    #   eth-rlp
+    #   eth-tester
+    #   rlp
+    #   web3
+exceptiongroup==1.2.0
+    # via
+    #   anyio
+    #   ipython
+executing==2.0.1
+    # via stack-data
+fastjsonschema==2.19.0
+    # via nbformat
+filelock==3.13.1
+    # via torch
+fonttools==4.46.0
+    # via matplotlib
+fqdn==1.5.1
+    # via jsonschema
+frozenlist==1.4.0
+    # via
+    #   aiohttp
+    #   aiosignal
+fsspec==2023.12.1
+    # via torch
+gensim==3.8.3
+    # via
+    #   karateclub
+    #   node2vec
+hexbytes==0.3.1
+    # via
+    #   eth-account
+    #   eth-rlp
+    #   web3
+idna==3.6
+    # via
+    #   anyio
+    #   jsonschema
+    #   requests
+    #   yarl
+importlib-metadata==7.0.0
+    # via
+    #   jupyter-client
+    #   jupyter-lsp
+    #   jupyterlab
+    #   jupyterlab-server
+    #   nbconvert
+importlib-resources==6.1.1
+    # via matplotlib
+ipykernel==6.27.1
+    # via jupyterlab
+ipython==8.18.1
+    # via ipykernel
+isoduration==20.11.0
+    # via jsonschema
+jedi==0.19.1
+    # via ipython
+jinja2==3.1.2
+    # via
+    #   jupyter-server
+    #   jupyterlab
+    #   jupyterlab-server
+    #   nbconvert
+    #   torch
+    #   torch-geometric
+joblib==1.3.2
+    # via
+    #   node2vec
+    #   scikit-learn
+json5==0.9.14
+    # via jupyterlab-server
+jsonpointer==2.4
+    # via jsonschema
+jsonschema[format-nongpl]==4.20.0
+    # via
+    #   jupyter-events
+    #   jupyterlab-server
+    #   nbformat
+    #   web3
+jsonschema-specifications==2023.11.2
+    # via jsonschema
+jupyter-client==8.6.0
+    # via
+    #   ipykernel
+    #   jupyter-server
+    #   nbclient
+jupyter-core==5.5.0
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   jupyter-server
+    #   jupyterlab
+    #   nbclient
+    #   nbconvert
+    #   nbformat
+jupyter-events==0.9.0
+    # via jupyter-server
+jupyter-lsp==2.2.1
+    # via jupyterlab
+jupyter-server==2.11.1
+    # via
+    #   jupyter-lsp
+    #   jupyterlab
+    #   jupyterlab-server
+    #   notebook
+    #   notebook-shim
+jupyter-server-terminals==0.4.4
+    # via jupyter-server
+jupyterlab==4.0.9
+    # via notebook
+jupyterlab-pygments==0.3.0
+    # via nbconvert
+jupyterlab-server==2.25.2
+    # via
+    #   jupyterlab
+    #   notebook
+karateclub==1.0.24
+    # via -r requirements.in
+kiwisolver==1.4.5
+    # via matplotlib
+lru-dict==1.2.0
+    # via web3
+markupsafe==2.1.3
+    # via
+    #   jinja2
+    #   nbconvert
+matplotlib==3.8.2
+    # via
+    #   -r requirements.in
+    #   seaborn
+matplotlib-inline==0.1.6
+    # via
+    #   ipykernel
+    #   ipython
+mistune==3.0.2
+    # via nbconvert
+mpmath==1.3.0
+    # via sympy
+multidict==6.0.4
+    # via
+    #   aiohttp
+    #   yarl
+nbclient==0.9.0
+    # via nbconvert
+nbconvert==7.11.0
+    # via jupyter-server
+nbformat==5.9.2
+    # via
+    #   jupyter-server
+    #   nbclient
+    #   nbconvert
+nest-asyncio==1.5.8
+    # via ipykernel
+networkx==3.2.1
+    # via
+    #   -r requirements.in
+    #   karateclub
+    #   node2vec
+    #   python-louvain
+    #   torch
+node2vec==0.4.3
+    # via -r requirements.in
+notebook==7.0.6
+    # via -r requirements.in
+notebook-shim==0.2.3
+    # via
+    #   jupyterlab
+    #   notebook
+numpy==1.26.2
+    # via
+    #   -r requirements.in
+    #   contourpy
+    #   gensim
+    #   karateclub
+    #   matplotlib
+    #   node2vec
+    #   pandas
+    #   pygsp
+    #   python-louvain
+    #   scikit-learn
+    #   scipy
+    #   seaborn
+    #   torch-geometric
+overrides==7.4.0
+    # via jupyter-server
+packaging==23.2
+    # via
+    #   ipykernel
+    #   jupyter-server
+    #   jupyterlab
+    #   jupyterlab-server
+    #   matplotlib
+    #   nbconvert
+pandas==2.1.3
+    # via
+    #   -r requirements.in
+    #   karateclub
+    #   seaborn
+pandocfilters==1.5.0
+    # via nbconvert
+parsimonious==0.9.0
+    # via
+    #   eth-abi
+    #   web3
+parso==0.8.3
+    # via jedi
+pexpect==4.9.0
+    # via ipython
+pillow==10.1.0
+    # via matplotlib
+platformdirs==4.0.0
+    # via jupyter-core
+prometheus-client==0.19.0
+    # via jupyter-server
+prompt-toolkit==3.0.41
+    # via ipython
+protobuf==4.25.1
+    # via web3
+psutil==5.9.6
+    # via
+    #   ipykernel
+    #   torch-geometric
+ptyprocess==0.7.0
+    # via
+    #   pexpect
+    #   terminado
+pure-eval==0.2.2
+    # via stack-data
+pycparser==2.21
+    # via cffi
+pycryptodome==3.19.0
+    # via
+    #   eth-hash
+    #   eth-keyfile
+pygments==2.17.2
+    # via
+    #   ipython
+    #   nbconvert
+pygraphviz==1.11
+    # via -r requirements.in
+pygsp==0.5.1
+    # via karateclub
+pyparsing==3.1.1
+    # via
+    #   matplotlib
+    #   torch-geometric
+python-dateutil==2.8.2
+    # via
+    #   arrow
+    #   jupyter-client
+    #   matplotlib
+    #   pandas
+python-json-logger==2.0.7
+    # via jupyter-events
+python-louvain==0.16
+    # via karateclub
+pytz==2023.3.post1
+    # via pandas
+pyyaml==6.0.1
+    # via jupyter-events
+pyzmq==25.1.1
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   jupyter-server
+referencing==0.31.1
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+    #   jupyter-events
+regex==2023.10.3
+    # via parsimonious
+requests==2.31.0
+    # via
+    #   bit
+    #   jupyterlab-server
+    #   torch-geometric
+    #   web3
+rfc3339-validator==0.1.4
+    # via
+    #   jsonschema
+    #   jupyter-events
+rfc3986-validator==0.1.1
+    # via
+    #   jsonschema
+    #   jupyter-events
+rlp==4.0.0
+    # via
+    #   eth-account
+    #   eth-rlp
+    #   eth-tester
+rpds-py==0.13.2
+    # via
+    #   jsonschema
+    #   referencing
+scikit-learn==1.3.2
+    # via
+    #   karateclub
+    #   torch-geometric
+scipy==1.11.4
+    # via
+    #   -r requirements.in
+    #   gensim
+    #   karateclub
+    #   pygsp
+    #   scikit-learn
+    #   torch-geometric
+seaborn==0.13.0
+    # via -r requirements.in
+semantic-version==2.10.0
+    # via eth-tester
+send2trash==1.8.2
+    # via jupyter-server
+six==1.16.0
+    # via
+    #   asttokens
+    #   bleach
+    #   gensim
+    #   karateclub
+    #   python-dateutil
+    #   rfc3339-validator
+smart-open==6.4.0
+    # via gensim
+sniffio==1.3.0
+    # via anyio
+soupsieve==2.5
+    # via beautifulsoup4
+stack-data==0.6.3
+    # via ipython
+sympy==1.12
+    # via torch
+terminado==0.18.0
+    # via
+    #   jupyter-server
+    #   jupyter-server-terminals
+threadpoolctl==3.2.0
+    # via scikit-learn
+tinycss2==1.2.1
+    # via nbconvert
+tomli==2.0.1
+    # via jupyterlab
+toolz==0.12.0
+    # via cytoolz
+torch==2.1.1
+    # via -r requirements.in
+torch-geometric==2.4.0
+    # via -r requirements.in
+tornado==6.4
+    # via
+    #   ipykernel
+    #   jupyter-client
+    #   jupyter-server
+    #   jupyterlab
+    #   notebook
+    #   terminado
+tqdm==4.66.1
+    # via
+    #   karateclub
+    #   node2vec
+    #   torch-geometric
+traitlets==5.14.0
+    # via
+    #   comm
+    #   ipykernel
+    #   ipython
+    #   jupyter-client
+    #   jupyter-core
+    #   jupyter-events
+    #   jupyter-server
+    #   jupyterlab
+    #   matplotlib-inline
+    #   nbclient
+    #   nbconvert
+    #   nbformat
+types-python-dateutil==2.8.19.14
+    # via arrow
+typing-extensions==4.8.0
+    # via
+    #   async-lru
+    #   eth-typing
+    #   ipython
+    #   torch
+tzdata==2023.3
+    # via pandas
+uri-template==1.3.0
+    # via jsonschema
+urllib3==2.1.0
+    # via requests
+wcwidth==0.2.12
+    # via prompt-toolkit
+web3==6.0.0
+    # via -r requirements.in
+webcolors==1.13
+    # via jsonschema
+webencodings==0.5.1
+    # via
+    #   bleach
+    #   tinycss2
+websocket-client==1.7.0
+    # via jupyter-server
+websockets==12.0
+    # via web3
+yarl==1.9.4
+    # via aiohttp
+zipp==3.17.0
+    # via
+    #   importlib-metadata
+    #   importlib-resources
